--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
       <img src="assets/img/Healthcare.jpg" alt="" data-aos="fade-in">
 
       <div class="container">
+        
 
         <div class="row justify-content-center text-left" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8" style="margin-left: -50px;">
@@ -195,13 +196,19 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
+        <div class="container section-title" data-aos="fade-up">
+          <h2 style="color: #215f34;">Limpopo Department Of Health MEC</h2>
+          <p style="color: #215f34;">Dr. Phophi Ramathuba</p>
+        </div><!-- End Section Title -->
+
         <div class="row gy-4">
           <div class="col-lg-6 order-1 order-lg-2">
             <img src="assets/img/MEC.jpg" style="height: 500px;width: 400px;margin-left: 200px; margin-top: -60px;"
               class="img-fluid" alt="">
           </div>
 
-          <h2 style="color: #215f34;">Department Of Health MEC Dr. Phophi Ramathuba</h2>
+
+          <!-- <h2 style="color: #215f34;">Department Of Health MEC Dr. Phophi Ramathuba</h2> -->
           <div class="col-lg-6 order-2 order-lg-1 content">
 
             <p class="fst-italic">
@@ -770,7 +777,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="mb-5" data-aos="fade-up" data-aos-delay="200">
-          <iframe style="border:0; width: 100%; height: 270px;"
+          <iframe style="border:0; width: 100%; height:400px;"
             src="https://www.google.com/maps/embed/v1/place?q=LIMPOPO+DEPARTMENT+OF+HEALTH&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
             frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div><!-- End Google Maps -->
