--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
       <a href="index.html" class="logo d-flex align-items-left me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/limpopohealthdeptlogo.jpg" alt="">
-        <!-- <img src="./assets/img/limpopohealthdeptlogo.jpg" style="height: 150px;width: 100px;"> -->
+        <!-- <img src="./assets/img/limpopohealthdeptlogo.jpg" alt=""> -->
+        <img src="assets/img/limpopohealthdeptlogo.jpg" style="height: 150px;width: 100px;">
 
       </a>
 
@@ -205,7 +205,7 @@
 
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="cardImage">
-              <img src="assets/img/Gallery/limpopoDephEALTH.jpg" alt="Avatar" style="width:550px; height: 550px;">
+              <img src="assets/img/limpopoDephEALTH-removebg-preview__1_-removebg-preview (2).png" style="height: 650px; width: 600px;;" alt="Avatar" >
               <div class="containerImage">
                 
               </div>
@@ -480,6 +480,9 @@
 
                 </div>
               </div><!-- End Features Item-->
+
+          
+
 
 
             </div>
