--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         
 
         <div class="row justify-content-center text-left" data-aos="fade-up" data-aos-delay="100">
-          <div class="col-xl-6 col-lg-8" style="margin-left: -50px;">
+          <div  style="margin-left: 320px;">
             <h2>Limpopo Department Of Health<span style="color: #215f34;">.</span></h2>
 
           </div>
