--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="cardImage">
-              <img src="assets/img/limpopoDephEALTH-removebg-preview__1_-removebg-preview (2).png" style="height: 650px; width: 600px;;" alt="Avatar" >
+              <img src="assets/img/Gallery/limpopoDephEALTH.jpg" style="height: 500px; width: 600px;;" alt="Avatar" >
               <div class="containerImage">
                 
               </div>
